templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwebui-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  rules:
    - host: openwebui.test
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: open-webui
              port:
                number: 3000
